Fixed font-size on small devices

--- a/src/components/BookAddButton/BookAddButton.scss
+++ b/src/components/BookAddButton/BookAddButton.scss
@@ -5,5 +5,6 @@
   border-radius: 20px;
   color: $add-button-text-color;
   cursor: pointer;
+  font-size: 14px;
   padding: 10px 20px;
 }
