--- a/src/components/BookItem/BookItem.scss
+++ b/src/components/BookItem/BookItem.scss
@@ -32,7 +32,7 @@
 
     .book-item__name {
       font-family: GT Super Bold, serif;
-      font-size: 22px;
+      font-size: 20px;
       font-weight: 700;
     }
 
@@ -40,18 +40,19 @@
       background-color: $book-item-category-bg-color;
       border-radius: 3px;
       color: $book-item-category-text-color;
-      font-size: 16px;
+      font-size: 14px;
       padding: 4px 8px;
     }
   }
 
   .book-item__price {
     font-weight: 600;
+    gap: 5px;
   }
 
   .book-item__desc {
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     margin-block-start: 10px;
     margin-right: 30px;
     max-height: 100px;
@@ -97,5 +98,17 @@
 @media (min-width: $medium-device-min-width) {
   .book-item__container {
     width: 48%;
+
+    .book-item__name {
+      font-size: 22px;
+    }
+
+    .book-item__category {
+      font-size: 16px;
+    }
+
+    .book-item__desc {
+      font-size: 14px;
+    }
   }
 }
