--- a/src/components/BookList/BookList.scss
+++ b/src/components/BookList/BookList.scss
@@ -21,7 +21,7 @@
     background-color: $book-item-bg-color;
     border: 1px solid $book-item-border-color;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
     height: 200px;
     width: min(96%, 600px);
   }
